Ukrainian focus tree - step by step

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -411,3 +411,27 @@ ukraine.76.a:0 "Long live our people, united and free!"
 ukraine.77.t:0 "Rifles and carbines"
 ukraine.77.d:0 "Produced by Alexander Dovzhenko film 'Rifles and carbines' ('Gvintivki ta karabini') is devoted to the story of the struggle between the Russian White forces under General Drozdovsky and the forces of the Ukrainian Kingdom in 1918 in the southern part of Ukraine during Iassy-Don March. The film, which was conceived to be an answer to the Bulgakov's 'White Guard' don`t try to point out the possible ways of the reconciliation, but shows that the potential separatists and spies of the foreign powers still hide among the Ukrainian population and can try to take power in the country, if Ukraine will become weaker."
 ukraine.77.a:0 "Death to the enemies of Ukraine!"
+
+### Foci ###
+
+UKR_Our_Future:0 "Our Future"
+UKR_Our_Future_desc:0 "The agricultural crisis has almost shattered an Ukrainian economy and stability in the country. The King barely controls the country, the loyal to the Hetman peasants want land reforms, the pro-Russian forces and the Nationalists claims the radical measures and the Syndicalists mobilizes their supporters all over the country..."
+
+UKR_Invite_Khrushchev:0 "Invite Khrushchev in the government"
+UKR_Invite_Khrushchev_desc:0 "Nikita Khrushchev, who is a well-known Ukrainian social-democrat, proposes the populist, but very popular among the peasants ideas of the reorganization of our agriculture. We have to admit, that some of his propositions can help Ukraine in this crisis. Maybe we should invite him to the government and allow him reforms in the economy?"
+UKR_Popular_Front:0 "Popular Front"
+UKR_Popular_Front_desc:0 "Though we allowed Khrushchev to reorganize the economy, but many of our legislators in the Rada prevent any attempt of Khrushchev to reduce the role of the landlords in the country. That's why Khrushchev has announced a creation of the 'Popular Front', which will unite left members of the Supreme Rada and give him enough authority to change the laws."
+UKR_Language_Issue:0 "Language Issue"
+UKR_Language_Issue_desc:0 "The Russian language is widespread in Ukraine and native for many our citizens, but it has never been our second state language. If we grant him such a role in Ukraine, it will allow us to gain the popularity among the pro-Russian citizens and solve one of the biggest problem in our country."
+UKR_Exp_Kulaks:0 "Expropriate the lands of Kulaks"
+UKR_Exp_Kulaks_desc:0 "'Kulaks' or 'Kurkuls' is a category of relatively affluent farmers who are able to hire a lot of the poorest peasants and thus earn an enormous amount of money. Since they are hated by the majority of the peasants, we can easily expropriate they lands and divide them between the poorest peasants in the country."
+UKR_Tax_Kulaks:0 "Tax the lands of Kulaks"
+UKR_Tax_Kulaks_desc:0 "'Kulaks' or 'Kurkuls' is a category of relatively affluent farmers who are able to hire a lot of the poorest peasants and thus earn an enormous amount of money. Since they are the only group of the farmers who are still able to fulfil our consumer needs, it would be wise to let them have their lands, but to impose an additional tax for them."
+UKR_Coll_Prog:0 "Collectivisation"
+UKR_Coll_Prog_desc:0 "After the latest agricultural crisis among the 'Kulaks', we got many new poor peasants all over Ukraine. Khrushchev supposes that they can work at the collective farms and produce the goods for the country, which will provide them with the farming tools and pay them salary."
+UKR_Fate_Monarchy:0 "The Fate of the Monarchy"
+UKR_Fate_Monarchy_desc:0 "King Vasily I gave Nikita Khrushchev extensive powers in a bid to control the revolutionary forces sweeping the country. Now that Khrushchev's initial program has been implemented, many interest groups within Ukraine are asking for Royal Power to intervene to create a more sustainable order."
+UKR_Syn_Rev:0 "Syndicalist Revolution!"
+UKR_Syn_Rev_desc:0 "Nikita Khrushchev and the Popular Front proclaimed the Republic of Ukraine. The King and his supporters have to leave the country!"
+UKR_Remove_Khrushchev:0 "Remove Khrushchev"
+UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late."
