USA and the Philippines

--- a/localisation/KR_Philippines_l_english.yml
+++ b/localisation/KR_Philippines_l_english.yml
@@ -56,7 +56,7 @@ PHL_JAP_Sabah_nope:0 "They've decided to keep Sabah for themselves"
 
 ### Faction ###
 syndicalist_asia:0 "Eastern Syndicalist Union"
-american_commonwealth:0 "Trans-Pacific Treaty Organisation"
+
 
 ### Events ###
 phil.0.t:0 "A Path Towards Independence"
@@ -366,12 +366,41 @@ phil.80.d:0 "After our aid programme to the Philippines, some members of our cab
 phil.80.a:0 "Contact them"
 phil.80.b:0 "We no longer have interests in East Asia"
 phil.81.t:0 "A proposal from the Americans"
-phil.81.d:0 "Even if our two countries no longer have any political ties as they had before the American Civil War, the United States has been observing with great interest the reforms we've been undertaking on the Philippines. In order to begin reestablishing our past ties, they have proposed a military alliance."
+phil.81.d:0 "Even if our two countries no longer have any political ties as they had before the American Civil War, the United States has been observing with great interest the reforms we've been undertaking on the Philippines. In order to re-establish ties between our two countries, the Americans have offered us entry into the League of American States. "
 phil.81.a:0 "This is a return to colonialism, we're not interested"
 phil.81.b:0 "Accept their proposal"
-phil.82.t:0 "The Philippines joins our Alliance"
+phil.82.t:0 "The Philippines Accepted!"
 phil.82.d:0 "The Philippines have accepted our offer!"
 phil.82.a:0 "Great!"
+phil.83.t:0 "A proposal from the Americans"
+phil.83.d:0 "Even if our two countries no longer have any political ties as they had before the American Civil War, the United States has been observing with great interest the reforms we've been undertaking on the Philippines. In order to re-establish ties between our two countries, the Americans have offered a treaty to put the bad blood behind us and improve relations and business ties between our countries."
+phil.83.a:0 "This is a return to colonialism, we're not interested"
+phil.83.b:0 "Accept their proposal"
+phil.84.t:0 "What to do with the Philippines?"
+phil.84.d:0 "The crisis of the 30s is finally behind us and the economy of America is finally back on track. A few congressmen have brought up what to do about the Philippines. Some suggest giving them indepedence but with american protection over them, while some wish to keep the status quo."
+phil.84.a:0 "Offer them Protection"
+phil.84.b:0 "Offer them Protection"
+phil.84.c:0 "The Status Quo is good."
+phil.85.t:0 "A proposal from the Americans"
+phil.85.d:0 "The Americans have decided that we should be an independent country. In addition they have offered us entry into the League of American States as a full member. Some are saying that this is just a poisoned pill designed to keep the Philippines tied to America and not be fully independent. While others are saying that this is the only way the americans will grant us independence. "
+phil.85.a:0 "Full Indepedence and nothing Else!"
+phil.85.b:0 "Accept their proposal"
+phil.86.t:0 "A proposal from the Americans"
+phil.86.d:0 "The Americans have decided that we should be an independent country. Not surprising though that this comes with an offer of increasing trade between our countries as well as protecting the Trade in the Philippines. Some are saying that this is just a poisoned pill designed to keep the Philippines tied to America and not be fully independent. While others are saying that this is the only way the Americans will grant us independence. "
+phil.86.a:0 "Full Indepedence and Nothing Else!"
+phil.86.b:0 "Accept their proposal"
+phil.87.t:0 "The Philippines want full indepedence"
+phil.87.d:0 "The Philippines have rejected our proposal of granting them independence instead claiming that we should grant them full freedom without any strings attached. The attitude in Washington is split. A number of politicians suggest giving full independence to them while others suggest that since they rejected our offer to reenforce the Status quo though this option might lead to a war."	
+phil.87.a:0 "Give it to them!"
+phil.87.b:0 "No!"
+phil.88.t:0 "The Americans say No!"
+phil.88.d:0 "The Americans have said No that we shall not have independence and the status quo shall be re-enforced. This is an outrage and many within the Philippines are suggesting that we declare war to earn our independence. However others are warning that a war against the Americans will only end in massive bloodshed for the Philippines. "	
+phil.88.a:0 "We shall fight for our rights!"
+phil.88.b:0 "Lets not risk it"
+
+
+
+
 
 # some description are already moved to the news event localisation files
 phil.84.a:0 "This should've been hidden!"
