GER: Research tree finished

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -124,8 +124,6 @@ GER_civ_industry_3:0 "stuff"
 GER_civ_industry_3_desc:0 "With our civilian industry once again strong, but not yet booming, we are required to take just a few more steps. Soon enough German industry will tower above the rest of the world once more, as the steady influx of resources from the colonies assures a massive production boost."
 GER_industry_finished:0 "Full Recovery"
 GER_industry_finished_desc:0 "After years of economic failure and crisis, the German industry have finally recovered! We can once again finally compete with the rest of the world! \n Thank God for Schacht and Groener!"
-GER_homeland:0 "Heimat Focus"
-GER_homeland_desc:0 "If we are to ensure the security and prosperity of our home provinces we must reconfigure our internal policies. We should also consider funding various science projects that could benefit our efforts."
 GER_research_expansion:0 "Extra Research Funding"
 GER_research_expansion_desc:0 "Let us invest in science and technology to stimulate advances in both military and civilian affairs."
 GER_ig_farben:0 "Invest In IG Farben"
@@ -140,15 +138,17 @@ GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
 GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields"
 GER_black_monday_radio:0 "The Kanzler and the Radio"
 GER_black_monday_radio_desc:0 "The crisis has shaken the Germans' belief in their country. Reichskanzler von Papen hopes to turn the tide with weekly radio addresses in which he will announce what steps the government has taken to combat the crisis."
-GER_groener1:0 "Bail out Junker Estates"
-GER_groener1_desc:0 "Liquidate unprofitable colony businesses"
+GER_groener1:0 ""
+GER_groener1_desc:0 ""
 GER_groener2:0 "Reichsarbeitsdienst"
 GER_groener3:0 "The Sale of Ceylon"
 GER_groener3_desc:0 "The island of Ceylon is a very unprofitable part of our colonial empire, requiring massive investions every year. However, there have been proposals of selling the island to the Princely Federation - without doubt a profitable idea."
-GER_schacht1:0 ""
+GER_schacht1:0 "Bail out Junker Estates"
 GER_schacht1_desc:0 ""
 GER_schacht2:0 "Investitionsprogramm"
 GER_schacht2_desc:0 ""
+GER_black_monday_finish:0 "Finish Black Monday reforms"
+GER_black_monday_finish_desc:0 ""
 GER_pathfinders:0 "Organise the Youth"
 GER_pathfinders_desc:0 "Some experts have suggested that the best solution against the current lawlessness in our nations youth would be organising them so that they can learn new skills and use their energies for the public good. The Pfadfinder organisation would require increased spending for such an endeavour."
 GER_dcgb:0 "A Christian Trade Union"
@@ -976,14 +976,13 @@ GER_ECO_REFORM:0 "6 months after black monday"
 FAUD_ban1:0 "Take no chances with these reds!"
 FAUD_allow:0 "The FAUD has been allowed to operate"
 ENG_GER_protection:0 "Protecting Ireland"
-mauser_werke_desc:0 "Taking this focus will unlock the Mauser Werke company"
+mauser_werke_desc:0 "Will upgrade the Mauser Werke Company.\n\n"
 eco_reco:0 "Economy recovered"
-GER_unlocks_albertros:0 "Will unlock the Albatros Company."
-GER_unlocks_junkers:0 "Will unlock the Junkers Company."
-GER_ig_farben_unlock:0 "Will unlock IG-Farben."
-GER_krupp_unlock:0 "Will unlock Krupp."
-GER_hahn_meitner_unlock:0 "Will unlock Hahn & Meitner."
-GER_zuse_unlock:0 "Will unlock Konrad Zuse."
+GER_unlocks_albertros:0 "Will upgrade the Albatros Company.\n\n"
+GER_unlocks_junkers:0 "Will upgrade the Junkers Company.\n\n"
+GER_ig_farben_unlock:0 "Will upgrade IG-Farben.\n\n"
+GER_krupp_unlock:0 "Will upgrade Krupp.\n\n"
+GER_hahn_meitner_unlock:0 "Will upgrade Hahn & Meitner.\n\n"
 DEN_ENG_ultimatum:0 "Sent ultimatum"
 DEN_abandon:0 "Abandoned conflict"
 DEN_ENG_back_down:0 "Cease fire"
