GER: Economy finished

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -138,7 +138,7 @@ GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
 GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields"
 GER_black_monday_radio:0 "The Kanzler and the Radio"
 GER_black_monday_radio_desc:0 "The crisis has shaken the Germans' belief in their country. Reichskanzler von Papen hopes to turn the tide with weekly radio addresses in which he will announce what steps the government has taken to combat the crisis."
-GER_groener1:0 ""
+GER_groener1:0 "Liquidate unprofitable estates"
 GER_groener1_desc:0 ""
 GER_groener2:0 "Reichsarbeitsdienst"
 GER_groener3:0 "The Sale of Ceylon"
@@ -982,6 +982,7 @@ GER_unlocks_albertros:0 "Will upgrade the Albatros Company.\n\n"
 GER_unlocks_junkers:0 "Will upgrade the Junkers Company.\n\n"
 GER_ig_farben_unlock:0 "Will upgrade IG-Farben.\n\n"
 GER_krupp_unlock:0 "Will upgrade Krupp.\n\n"
+GER_siemens_unlock:0 "Will upgrade Siemens.\n\n"
 GER_hahn_meitner_unlock:0 "Will upgrade Hahn & Meitner.\n\n"
 DEN_ENG_ultimatum:0 "Sent ultimatum"
 DEN_abandon:0 "Abandoned conflict"
