Tweaks to South Africa pre-CW

--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -25,7 +25,7 @@ SAF_protectorates:0 "Status of the Protectorates"
 SAF_protectorates_desc:0 "The old HCTs are still mere protectorates within our sovereign territory. To develop them any further, we must integrate them into our country. This will however not be a simple task, and multiple paths are open to us. All of them are likely to lead to durable political unrest, however."
 
 SAF_paramount_chiefs:0 "Extend Native Autonomy"
-SAF_paramount_chiefs_desc:0 "Granting autonomy to the local rulers of the former HCTs allows us to install new, autonomous Paramount Chiefs of their respective ethnic groups (the Tswana in Bechuanaland, the Basotho in Basotuland and the Swazi in Swaziland) loyal to the central government."
+SAF_paramount_chiefs_desc:0 "Granting autonomy to the local rulers of the former HCTs will allow us to install new, autonomous Paramount Chiefs of their respective ethnic groups (the Tswana in Bechuanaland, the Basotho in Basotuland and the Swazi in Swaziland) loyal to the central government."
 
 SAF_personal_forces:0 "Personal Forces of the Paramount Chiefs"
 SAF_personal_forces_desc:0 "Given the increased autonomy of the Paramount Chiefs, some of them are asking to be allowed to raise their own forces comprised of their respective tribesmen to better secure their own positions. While arming natives is an unpalatable prospect, it would reduce the strain upon the Union's armed forces."
@@ -37,13 +37,13 @@ SAF_nuweveld:0 "Nuweveld Settlements"
 SAF_nuweveld_desc:0 "Turning the newly annexed territories over to white settlers will encourage the establishment of new settlements throughout the Nuweveld and the cultural integration of the new regions. The locals however would lose access to most agricultural lands, forcing them to migrate to the cities for work as transient labour."
 
 SAF_native_rights:0 "Native Rights"
-SAF_native_rights_desc:0 "The integration of the Nuweveld territories and the desperate need to cheap labour in those regions has raised the issue of Native rights. Many politicians are now ready to make radical compromises in a few categories."
+SAF_native_rights_desc:0 "The integration of the Nuweveld territories and the desperate need for cheap and plentiful labour in those regions has raised the issue of Native rights. Many politicians are now ready to make radical compromises in a few categories."
 
 SAF_gesuiwerde_infrastructure:0 "The Kariba Dam"
 SAF_gesuiwerde_infrastructure_desc:0 "Plans for a hydro-electric dam on the Zambezi have up until now been ruled out as prohibitively costly, but with access to plentiful local native labour, this massive project can now go ahead. We should start by reclaiming the land around the dam."
 
 SAF_gesuiwerde_mines:0 "Nuweveld Mines"
-SAF_gesuiwerde_mines_desc:0 "The new reserves of native labour have allow us to significantly expand our mining capacity in the Nuweveld, giving us the potential of producing ores on an industrial scale."
+SAF_gesuiwerde_mines_desc:0 "The new reserves of native labour allow us to significantly expand our mining capacity in the Nuweveld, giving us the potential of producing ores on an industrial scale."
 
 SAF_gesuiwerde_steelworks:0 "Vanderbijlpark's Steelworks"
 SAF_gesuiwerde_steelworks_desc: "The new reserves of native labour allow us to significantly expand South Africa's steel production with a new large-scale facility at Vanderbijlpark."
@@ -52,7 +52,7 @@ SAF_gesuiwerde_dam:0 "Finish the Kariba Dam"
 SAF_gesuiwerde_dam_desc:0 "Finishing the Kariba Dam will take long and arduous work, but it will provide plenty of energy for our expanding industry in Rhodesia."
 
 SAF_national_recovery_plan:0 "National Recovery Plan"
-SAF_national_recovery_plan_desc:0 "We must now move to resolve the economic crisis in out nation brought on by the global crash. Each political faction has put a plan forwards, the choice is now ours."
+SAF_national_recovery_plan_desc:0 "We must now move to resolve the economic crisis in our nation brought on by the global crash. Each political faction has put a plan forwards, the choice is now ours."
 
 SAF_industrialization:0 "Industrialisation"
 SAF_industrialization_desc:0 "The Gesuiwerde are pushing for increased industrialisation, but the cost at this stage could be prohibitive. Nevertheless, we must push forwards to solve the current crisis."
@@ -61,7 +61,7 @@ SAF_witwatersrand:0 "The Witwatersrand Basin"
 SAF_witwatersrand_desc:0 "We have begun our efforts to further industrialise our nation. Through the entire Witwatersrand basin roads and railway tracks are being built and new steel mills constructed, bringing thousands back into the workforce."
 
 SAF_new_mines:0 "Industrial Mining"
-SAF_new_mines_desc:0 "Industrialisation continues at an impressive pace with new mines are opening every month across the Orange Free State and the Transvaal. The roads of Johannesburg and Pretoria equal that of any European city. But there is discontent rising from the British provinces, who believe that our program is unfairly weighted towards the Afrikaans speaking areas."
+SAF_new_mines_desc:0 "Industrialisation continues at an impressive pace with new mines opening every month across the Orange Free State and the Transvaal. The roads of Johannesburg and Pretoria equal that of any European city. But there is discontent rising from the British provinces, who believe that our program is unfairly weighted towards the Afrikaans speaking areas."
 
 SAF_complete_industrialisation:0 "The Afrikaner Recovery"
 SAF_complete_industrialisation_desc:0 "We have finally solved our economical crisis and solidified our status as the most industrialised nation in Africa! The cost however has been severe, financially, politically and socially. Our focus upon the former Boer Republics has left a bitter taste in the mouths of the British provinces, who are still seeing high levels of unemployment."
