--- a/localisation/KR_Philippines_l_english.yml
+++ b/localisation/KR_Philippines_l_english.yml
@@ -57,7 +57,6 @@ PHL_JAP_Sabah_nope:0 "They've decided to keep Sabah for themselves"
 ### Faction ###
 syndicalist_asia:0 "Eastern Syndicalist Union"
 
-
 ### Events ###
 phil.0.t:0 "A Path Towards Independence"
 phil.0.d:0 "The Philippines were a Spanish colony until late 1898, when the United States claimed them as a war prize from Spain. Years of violent struggle for independence followed, and as the economic and political crisis in America began to worsen, they finally bore fruit. In 1934, The Tydings-McDuffie Act was passed, creating the Commonwealth of the Philippines with an elected government under Manuel Quezon and a constitution based upon that of the United States, while Washington retained control of the country's foreign affairs and military. More importantly, it stipulated that after ten years of transition, the archipelago would become a fully independent republic. But storm clouds are gathering over America. Will the Philippines achieve independence sooner than expected, and will that lead to them becoming prey for yet another major empire? Only time will tell..."
@@ -323,7 +322,7 @@ phil.69.a:0 "Invite them to the Internationale"
 phil.69.b:0 "Promote an alliance of Bharatiya Commune and the Philippines"
 phil.69.c:0 "Syndicalism in Asia is a distant goal, not something for now"
 phil.70.t:0 "An alliance with the Philippines?"
-phil.70.d:0 "The Commune of France, cradle of the Syndicalist Revolution, has been undertaking economical aid programmes with a new socialist republic in Asia, the Philippines. If that young republic ever falls into a war against the burgeoisie powers, however, France is too far to do much help. Therefore, they have asked us to enter talks with the Philippines and attempt to establish an alliance of syndicalist nations in Asia."
+phil.70.d:0 "The Commune of France, cradle of the Syndicalist Revolution, has been undertaking economical aid programmes with a new socialist republic in Asia, the Philippines. If that young republic ever falls into a war against the bourgeoisie powers, however, France is too far to do much help. Therefore, they have asked us to enter talks with the Philippines and attempt to establish an alliance of syndicalist nations in Asia."
 phil.70.a:0 "Not interested, sorry"
 phil.70.b:0 "Make the proposal"
 phil.701.t:0 "An alliance in syndicalist Asia?"
@@ -377,19 +376,19 @@ phil.83.d:0 "Even if our two countries no longer have any political ties as they
 phil.83.a:0 "This is a return to colonialism, we're not interested"
 phil.83.b:0 "Accept their proposal"
 phil.84.t:0 "What to do with the Philippines?"
-phil.84.d:0 "The crisis of the 30s is finally behind us and the economy of America is finally back on track. A few congressmen have brought up what to do about the Philippines. Some suggest giving them indepedence but with american protection over them, while some wish to keep the status quo."
+phil.84.d:0 "The crisis of the 30s is finally behind us and the economy of America is finally back on track. A few congressmen have brought up what to do about the Philippines. Some suggest giving them independence but with American protection over them, while some wish to keep the status quo."
 phil.84.a:0 "Offer them Protection"
 phil.84.b:0 "Offer them Protection"
 phil.84.c:0 "The Status Quo is good."
 phil.85.t:0 "A proposal from the Americans"
-phil.85.d:0 "The Americans have decided that we should be an independent country. In addition they have offered us entry into the League of American States as a full member. Some are saying that this is just a poisoned pill designed to keep the Philippines tied to America and not be fully independent. While others are saying that this is the only way the americans will grant us independence. "
-phil.85.a:0 "Full Indepedence and nothing Else!"
+phil.85.d:0 "The Americans have decided that we should be an independent country. In addition they have offered us entry into the League of American States as a full member. Some are saying that this is just a poisoned pill designed to keep the Philippines tied to America and not be fully independent. While others are saying that this is the only way the Americans will grant us independence. "
+phil.85.a:0 "Full Independence and nothing Else!"
 phil.85.b:0 "Accept their proposal"
 phil.86.t:0 "A proposal from the Americans"
 phil.86.d:0 "The Americans have decided that we should be an independent country. Not surprising though that this comes with an offer of increasing trade between our countries as well as protecting the Trade in the Philippines. Some are saying that this is just a poisoned pill designed to keep the Philippines tied to America and not be fully independent. While others are saying that this is the only way the Americans will grant us independence. "
-phil.86.a:0 "Full Indepedence and Nothing Else!"
+phil.86.a:0 "Full Independence and Nothing Else!"
 phil.86.b:0 "Accept their proposal"
-phil.87.t:0 "The Philippines want full indepedence"
+phil.87.t:0 "The Philippines want full independence"
 phil.87.d:0 "The Philippines have rejected our proposal of granting them independence instead claiming that we should grant them full freedom without any strings attached. The attitude in Washington is split. A number of politicians suggest giving full independence to them while others suggest that since they rejected our offer to reenforce the Status quo though this option might lead to a war."	
 phil.87.a:0 "Give it to them!"
 phil.87.b:0 "No!"
