--- a/localisation/KR_South_Africa_l_english.yml
+++ b/localisation/KR_South_Africa_l_english.yml
@@ -1,7 +1,6 @@
 ﻿l_english:
 
 ### Companies ###
-
 south_african_steel_and_iron:0 "South African Iron and Steel Industrial Corp."
 university_of_cape_town:0 "University of Cape Town"
 african_explosives:0 "African Explosives and Industries"
@@ -11,6 +10,28 @@ marmon_herrington_south_africa:0 "Marmon-Herrington South Africa"
 south_african_railways:0 "South African Railways"
 de_havilland_south_africa:0 "de Havilland South Africa"
 south_african_vickers:0 "Vickers-Armstrong South Africa"
+
+### Parties ###
+SAF_totalist_party:0 "TPSA"
+SAF_radical_socialist_party:0 "ISL"
+SAF_syndicalist_party:0 "SACP"
+SAF_social_democrat_party:0 "SALP"
+SAF_social_liberal_party:0 "LP"
+SAF_market_liberal_party:0 "PP"
+SAF_social_conservative_party:0 "CP"
+SAF_authoritarian_democrat_party:0 "NP"
+SAF_paternal_autocrat_party:0 "PNP"
+SAF_national_populist_party:0 "AB"
+SAF_totalist_party_long:0 "Totalist Party of South Africa"
+SAF_radical_socialist_party_long:0 "International Socialist League"
+SAF_syndicalist_party_long:0 "South African Communist Party"
+SAF_social_democrat_party_long:0 "South African Labour Party"
+SAF_social_liberal_party_long:0 "Liberal Party of South Africa"
+SAF_market_liberal_party_long:0 "Progressive Party"
+SAF_social_conservative_party_long:0 "Conservative Party"
+SAF_authoritarian_democrat_party_long:0 "National Party"
+SAF_paternal_autocrat_party_long:0 "Afrikaans Gesuiwerde Nasionale Party"
+SAF_national_populist_party_long:0 "Afrikaner Bond"
 
 ### Pre-CW Political Focus ###
 
@@ -392,11 +413,11 @@ SACW.20.d:0 "The ISL Syndicalists have encouraged the mine workers of the Orange
 SACW.20.a:0 "Red bastards!"
 
 SACW.21.t:0 "Inauguration of the Voortrekker Monument"
-SACW.21.d:0 "The reenactment of the Great Trek that left Cape Town two weeks ago has arrived in Pretoria. President Smuts was unable to attend as recent incidents across the country compromised the security of the event. Instead, ex-president Hertzog made an unscheduled address the crowd, proudly clamoring that the Afrikaner nation must stand together to preserve its way of life and that he would never surrender the Union of South Africa to the Britons or the Natives.\n\nThe ceremony was an extravagant affair, almost exclusively due to generous Ossewabrandwag contributions, with tens of thousands attending. Pretoria and Johannesburg have since been gripped with nationalist frenzy, with incidents of violence reported across the town against British and Native residents."
+SACW.21.d:0 "The reenactment of the Great Trek that left Cape Town two weeks ago has arrived in Pretoria. President Smuts was unable to attend as recent incidents across the country compromised the security of the event. Instead, ex-president Hertzog made an unscheduled address the crowd, proudly claiming that the Afrikaner nation must stand together to preserve its way of life and that he would never surrender the Union of South Africa to the Britons or the Natives.\n\nThe ceremony was an extravagant affair, almost exclusively due to generous Ossewabrandwag contributions, with tens of thousands attending. Pretoria and Johannesburg have since been gripped with nationalist frenzy, with incidents of violence reported across the town against British and Native residents."
 SACW.21.a:0 "We are proud Afrikaners!"
 
 SACW.22.t:0 "Restoration of the Z.A.R."
-SACW.22.d:0 "In resonse to recent events, today in the Pretoria City Hall the provincial governors of both the Transvaal and the Orange Free State have declared their secession from the Union of South Africa, effective immediately. They have formed together the second Zuid-Afrikaansche Republiek and named Hertzog as their new President. Afrikaner units have deserted to join the Z.A.R. and the Republic has begun raising their own armed forces, many coming from the militias of the Ossewabrandwag."
+SACW.22.d:0 "In response to recent events, today in the Pretoria City Hall the provincial governors of both the Transvaal and the Orange Free State have declared their secession from the Union of South Africa, effective immediately. They have formed together the second Zuid-Afrikaansche Republiek and named Hertzog as their new President. Afrikaner units have deserted to join the Z.A.R. and the Republic has begun raising their own armed forces, many coming from the militias of the Ossewabrandwag."
 SACW.22.a:0 "If it's a fight they want."
 
 SACW.23.t:0 "The Natal Covenant"
@@ -495,25 +516,3 @@ SACW.43.a:0 "Great!"
 SACW.44.t:0 "The End of the Fourth Boer War"
 SACW.44.d:0 "For good or ill, the Fourth Boer War is now over."
 SACW.44.a:0 "Great!"
-
-### Parties ###
-SAF_totalist_party:0 "TPSA"
-SAF_radical_socialist_party:0 "ISL"
-SAF_syndicalist_party:0 "SACP"
-SAF_social_democrat_party:0 "SALP"
-SAF_social_liberal_party:0 "LP"
-SAF_market_liberal_party:0 "PP"
-SAF_social_conservative_party:0 "CP"
-SAF_authoritarian_democrat_party:0 "NP"
-SAF_paternal_autocrat_party:0 "PNP"
-SAF_national_populist_party:0 "AB"
-SAF_totalist_party_long:0 "Totalist Party of South Africa"
-SAF_radical_socialist_party_long:0 "International Socialist League"
-SAF_syndicalist_party_long:0 "South African Communist Party"
-SAF_social_democrat_party_long:0 "South African Labour Party"
-SAF_social_liberal_party_long:0 "Liberal Party of South Africa"
-SAF_market_liberal_party_long:0 "Progressive Party"
-SAF_social_conservative_party_long:0 "Conservative Party"
-SAF_authoritarian_democrat_party_long:0 "National Party"
-SAF_paternal_autocrat_party_long:0 "Afrikaans Gesuiwerde Nasionale Party"
-SAF_national_populist_party_long:0 "Afrikaner Bond"
