--- a/localisation/KR_Russia_Domestic_l_english.yml
+++ b/localisation/KR_Russia_Domestic_l_english.yml
@@ -389,7 +389,7 @@ rusd.112.t:0 "Pavel Ignatiev dies"
 rusd.112.d:0 "The Tsarist education Minister and present conservative activist has passed away."
 
 rusd.113.t:0 "Nadezhda Krupskaya dies"
-rusd.113.d:0 "Nadezhda Krupskaya has passed away. Being Lenin's widow, she became the symbol for all remaining Bolsheviks after the disaster of the Civil War. In 1922 she was elected in the VI Duma and started a campaign against illitreacy that, with support by the President, launched in 1924. She decided not to participate in the VIII Duma elections. Her last official appearance was on the first Council of the Novye Bolsheviki bloc, there she blessed Bukharin and said 'Lenin has died, but his cause lives!'"
+rusd.113.d:0 "Nadezhda Krupskaya has passed away. Being Lenin's widow, she became the symbol for all remaining Bolsheviks after the disaster of the Civil War. In 1922 she was elected in the VI Duma and started a campaign against illiteracy that, with support by the President, launched in 1924. She decided not to participate in the VIII Duma elections. Her last official appearance was on the first Council of the Novye Bolsheviki bloc, there she blessed Bukharin and said 'Lenin has died, but his cause lives!'"
 
 rusd.114.t:0 "Field Marshal Sherbatchev dies"
 rusd.114.d:0 "A Hero of the Civil War passed away peacefully in his manor near Irkutsk yesterday."
@@ -464,7 +464,7 @@ rusd.132.d:0 "'The Crimea. New Russia. Little Russia. White Russia. Our lands. O
 rusd.132.a:0 "One nation, one country, one Russia."
 
 rusd.133.t:0 "Our Russia"
-rusd.133.d:0 "'You, sons of the steppes. And you, nomads in the desserts. And many of you, who live all over the Russian land. Many of you betrayed us, when Russia needed your help. Many of you didn`t give a helping hand to your compatriots, when they struggled against the red menace. We cannot forget it. But we can forgive you. New Russia needs your help in the restoration of its might. Help your country to make it great once again. Glory to Russia and glory to its heroes. It is your country too' - The new national policy of Russia is based on the idea of the supremacy of the Russians, but the idea of the friendship of the nations is popular as well. Savinkov combined these two ideas to secure the interests of the Russians and the minorities, who should be loyal, but also can use all the right of the citizens. This recreation of the old tsarist national policy can finally bring an order and peace to the people of Russia."
+rusd.133.d:0 "'You, sons of the steppes. And you, nomads in the desserts. And many of you, who live all over the Russian land. Many of you betrayed us, when Russia needed your help. Many of you didn't give a helping hand to your compatriots, when they struggled against the red menace. We cannot forget it. But we can forgive you. New Russia needs your help in the restoration of its might. Help your country to make it great once again. Glory to Russia and glory to its heroes. It is your country too' - The new national policy of Russia is based on the idea of the supremacy of the Russians, but the idea of the friendship of the nations is popular as well. Savinkov combined these two ideas to secure the interests of the Russians and the minorities, who should be loyal, but also can use all the right of the citizens. This recreation of the old tsarist national policy can finally bring an order and peace to the people of Russia."
 rusd.133.a:0 "Russia for the Russians and its loyal minorities!"
 
 rusd.134.t:0 "VDNKh"
@@ -476,7 +476,7 @@ rusd.135.d:0 "Though Savinkov and Kornilov have established a dictatorship, but 
 rusd.135.a:0 "History repeats itself."
 	
 rusd.136.t:0 "Felix Yusupov and the SPC"
-rusd.136.d:0 "The richest man of Russia, well-known aristocrat Felix Yusupov has always wanted to take part in the life of Russia, but even using his money he could get only a small group of the supporters in the Senate and State Duma. With the creation of the SPC Yusupov has finally understood how he can get one of the highest posts in the Russian Republic. Yusupov has proposed to create the united civil and military engineering organization with him on the top, which will use Yusupov's money as a start-up capital. But in exchange for this necessary investment for our country, Felix asks us to make him the new Privy Councillor."
+rusd.136.d:0 "The richest man of Russia, well-known aristocrat Felix Yusupov has always wanted to take part in the life of Russia, but even using his money he could get only a small group of the supporters in the Senate and State Duma. With the creation of the SPC Yusupov has finally understood how he can get one of the highest posts in the Russian Republic. Yusupov has proposed to create the united civil and military engineering organisation with him on the top, which will use Yusupov's money as a start-up capital. But in exchange for this necessary investment for our country, Felix asks us to make him the new Privy Councillor."
 rusd.136.a:0 "Felix, you are the new member of the SPC!"
 rusd.136.b:0 "There won't be any nobles in the Council!"
 
