Ukrainian focus tree - first steps, part two

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -326,8 +326,8 @@ ukraine.54.b:0 "Long live Leo Stefan! And his supporters from 'OUN'..."
 ukraine.54.c:0 "Long live Daniil! And his supporters from 'ViN'..."
 ukraine.54.e:0 "Long live Daniil! And his supporters from 'OUN'..."
 ukraine.54.f:0 "Long live Daniil! And his father Pavel..."
-ukraine.55.t:0 "Recognising Russian as the Official Second Language"
-ukraine.55.d:0 "One of the biggest problems, which exists in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but its usage is prohibited in the state institutions. 'Faith and Nation' movement has always opposed this prohibition and thus it is with great pleasure that prime-minister Mikhail Bulgakow now finally is able to abolish this language law."
+ukraine.55.t:0 "Recognising Russian as the Second Language"
+ukraine.55.d:0 "One of the biggest problems, which exists in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but its usage is prohibited in the state institutions. 'Faith and Nation' movement has always opposed this prohibition and thus it is with great pleasure that prime-minister Mikhail Bulgakov now finally is able to abolish this language law."
 ukraine.55.a:0 "Yes, in the name of Gogol!"
 ukraine.55.b:0 "No, I don't think so!"
 ukraine.56.t:0 "Free Trade Area in the East"
@@ -435,3 +435,22 @@ UKR_Syn_Rev:0 "Syndicalist Revolution!"
 UKR_Syn_Rev_desc:0 "Nikita Khrushchev and the Popular Front proclaimed the Republic of Ukraine. The King and his supporters have to leave the country!"
 UKR_Remove_Khrushchev:0 "Remove Khrushchev"
 UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late."
+
+UKR_Broad_Coalition:0 "Coalition is formed"
+UKR_Broad_Coalition_desc:0 "Realizing the syndicalist threat, Hetman Skorapadsky decided to strike a bargain with the pro-Russian 'ViN' and nationalist 'OUN'. Both parties will get freedom of action in the regions, where they are especially popular, but in return they will support Skoropadsky's regime and our king."
+UKR_Rightist_Government:0 "'ViN' and 'OUN' Commence Reforms"
+UKR_Rightist_Government_desc:0 "Members of 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' have begun to replace old officials of the Hetman`s period in the regions. Surprisingly, it has had a positive effect on our economy, because new local governments are ready to solve problems of their towns and villages."
+UKR_ViN_Russophiles:0 "Church and Nation"
+UKR_ViN_Russophiles_desc:0 "It seems, that Mikhail Bulgakov with the help of 'ViN' has finally found a proper decision, which allow him to solve the land question. The Ukrainian Church, which is a part of the Russian Orthodox Church will sell the unused lands to the peasants, but the Orthodoxy will be recognised as the state religion in Ukraine."
+UKR_OUN_Nationalists:0 "Сonfiscate the Land"
+UKR_OUN_Nationalists_desc:0 "Lots of Polish landlords control many lands in the Western and Central Ukraine. Since Poland is weak now, we can easily confiscate their estates, expel these Poles and redistribute their lands among the Ukrainian peasants."
+UKR_Abolish_Law:0 "Recognising Russian as the Official Second Language"
+UKR_Abolish_Law_desc:0 "One of the biggest problems, which exists in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but its usage is prohibited in the state institutions. 'ViN' has always opposed this prohibition and thus it is with great pleasure that Mikhail Bulgakov now is able to abolish this language law."
+UKR_Prosvita_Mov:0 "The Prosvita Movement"
+UKR_Prosvita_Mov_desc:0 "Unfortunately the majority of our people use the Russian language despite the fact that the government doesn't recognise it as a state language. To combat this, 'OUN' proposed to invest in the activities of the 'Prosvita' ('Education') movement. The aim of 'Prosvita' is to spread Ukrainian language all over our country as well as abroad."
+UKR_Free_Trade:0 "Free Trade Area in the East"
+UKR_Free_Trade_desc:0 "The free trade area with Ukraine has shown its benefits. The borderlands which have been deserted since the Weltkrieg are full of collieries and ironworks now. The unemployment rate has reached the lowest level since 1918. This is a great example of the successes brought by Russo-Ukrainian co-operation!"
+UKR_Resettlement:0 "Resettlement"
+UKR_Resettlement_desc:0 "The Ukrainian nation is still divided, though Ukraine has been already existing almost for 20 years. We should change the situation and resettle peasants from the Western Ukraine to the East, where they will become workers in the Donbass industry, but will also bring their ideas and traditions in this unfriendly to 'OUN' region."
+UKR_Crisis_Coalition:0 "Crisis in the Coalition"
+UKR_Crisis_Coalition_desc:0 "Though the Syndicalist threat doesn't exist anymore, but 'ViN' and 'OUN' gained too much popularity among the citizens of Ukraine and almost ready to split our country into two parts. We have to do something with it, since the situation in Europe and in the World is really disturbing."
